--- a/composer.json
+++ b/composer.json
@@ -22,12 +22,12 @@
     "matriphe/iso-639": "^1.2",
     "vipnytt/robotstxtparser": "^2.0",
     "rexxars/html-validator": "^2.1",
-    "phpunit/phpunit": "^6.0||^7.0|^8.0",
+    "phpunit/phpunit": "^6.0||^7.0||^8.0",
     "ext-dom": "*"
   },
   "require-dev": {
     "behat/mink-goutte-driver": "^1.0",
-    "behat/mink-browserkit-driver": "^1.0",
+    "behat/mink-browserkit-driver": "^1.3",
     "behat/symfony2-extension": "^2.0"
   },
   "suggest": {
