--- a/.travis.yml
+++ b/.travis.yml
@@ -5,14 +5,13 @@ cache:
     - $HOME/.composer/cache
 
 php:
-  - 7.0
   - 7.1
   - 7.2
   - 7.3
 
 matrix:
   include:
-    - php: 7.0
+    - php: 7.1
       env: DEPENDENCIES='lowest'
 
 before_script:
@@ -23,4 +22,6 @@ before_script:
   - if [ "$DEPENDENCIES" != "lowest" ]; then composer update --prefer-stable; fi;
 
 script:
-  - ./vendor/bin/behat --format=progress --no-interaction
+  - composer check-security
+  - composer check-static
+  - composer test
