--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
   "homepage": "https://github.com/mortola/behat-seo-contexts",
   "type": "library",
   "require": {
-    "php": ">=7.0",
+    "php": ">=7.1",
     "behat/behat": "^3.0",
     "behat/mink-extension": "^2.0",
     "matriphe/iso-639": "^1.2",
@@ -28,10 +28,15 @@
   "require-dev": {
     "behat/mink-goutte-driver": "^1.0",
     "behat/mink-browserkit-driver": "^1.3",
-    "behat/symfony2-extension": "^2.0"
-  },
-  "suggest": {
-    "symplify/easy-coding-standard": "Allows code style test using composer test-cs console command"
+    "behat/symfony2-extension": "^2.0",
+    "phpmd/phpmd": "^2.7",
+    "phpstan/phpstan": "^0.11.8",
+    "phpstan/phpstan-deprecation-rules": "^0.11.2",
+    "sebastian/phpcpd": "^4.1",
+    "sensiolabs/security-checker": "^6.0",
+    "symplify/easy-coding-standard": "^6.0",
+    "thecodingmachine/phpstan-strict-rules": "^0.11.2",
+    "phpstan/phpstan-phpunit": "^0.11.2"
   },
   "autoload": {
     "psr-4": {
@@ -47,9 +52,16 @@
   ],
   "scripts": {
     "serve": "php -S localhost:8080 -t tests/fixtures/web & php -S localhost:8081 -t tests/fixtures/web",
-    "test-cs": "vendor/bin/ecs check src",
-    "fix-cs": "vendor/bin/ecs check src --fix",
-    "test": "vendor/bin/behat"
+    "check-static": [
+      "vendor/bin/phpstan analyse --no-interaction --ansi",
+      "vendor/bin/phpmd src text phpmd.xml --suffixes php --ansi",
+      "vendor/bin/phpcpd --fuzzy --no-interaction --min-lines 5 --min-tokens 50 --regexps-exclude='Resources' --ansi src",
+      "vendor/bin/ecs check src --no-interaction --ansi"
+    ],
+    "fix-static": [
+      "vendor/bin/ecs check src --fix --no-interaction --ansi"
+    ],
+    "test": "vendor/bin/behat --no-interaction"
   },
   "config": {
     "process-timeout": 0
