--- a/easy-coding-standard.yml
+++ b/easy-coding-standard.yml
@@ -1,7 +1,8 @@
 imports:
-  - { resource: 'vendor/symplify/easy-coding-standard/config/clean-code.yml' }
-  - { resource: 'vendor/symplify/easy-coding-standard/config/psr2.yml' }
+    - { resource: 'vendor/symplify/easy-coding-standard/config/set/clean-code.yaml' }
+    - { resource: 'vendor/symplify/easy-coding-standard/config/set/psr2.yaml' }
+    - { resource: 'vendor/symplify/easy-coding-standard/config/set/php70.yaml' }
 
 services:
-  PhpCsFixer\Fixer\ArrayNotation\ArraySyntaxFixer:
-    syntax: short
+    PhpCsFixer\Fixer\ArrayNotation\ArraySyntaxFixer:
+        syntax: short
