--- a/easy-coding-standard.yml
+++ b/easy-coding-standard.yml
@@ -6,3 +6,6 @@ imports:
 services:
     PhpCsFixer\Fixer\ArrayNotation\ArraySyntaxFixer:
         syntax: short
+
+    PhpCsFixer\Fixer\Operator\ConcatSpaceFixer:
+        spacing: one
