--- a/composer.json
+++ b/composer.json
@@ -1,69 +1,68 @@
 {
-  "name": "marcortola/behat-seo-contexts",
-  "description": "Behat extension for testing some On-Page SEO factors: meta title/description, canonical, hreflang, meta robots, robots.txt, redirects, sitemap validation, HTML validation, performance...",
-  "keywords": [
-    "BDD",
-    "Behat",
-    "Context",
-    "SEO",
-    "HTML validation",
-    "Sitemap validation",
-    "Robots validation",
-    "Hreflang checker",
-    "Redirects",
-    "Canonicalization"
-  ],
-  "homepage": "https://github.com/marcortola/behat-seo-contexts",
-  "type": "library",
-  "require": {
-    "php": ">=7.1",
-    "behat/behat": "^3.0",
-    "behat/mink-extension": "^2.0",
-    "matriphe/iso-639": "^1.2",
-    "vipnytt/robotstxtparser": "^2.0",
-    "rexxars/html-validator": "^2.1",
-    "ext-dom": "*"
-  },
-  "require-dev": {
-    "behat/mink-goutte-driver": "^1.0",
-    "behat/mink-browserkit-driver": "^1.3",
-    "behat/symfony2-extension": "^2.0",
-    "phpmd/phpmd": "^2.7",
-    "phpstan/phpstan": "^0.11.8",
-    "phpstan/phpstan-deprecation-rules": "^0.11.2",
-    "sebastian/phpcpd": "^4.1",
-    "sensiolabs/security-checker": "^6.0",
-    "symplify/easy-coding-standard": "^6.0",
-    "thecodingmachine/phpstan-strict-rules": "^0.11.2",
-    "phpstan/phpstan-webmozart-assert": "^0.11.2",
-    "webmozart/assert": "^1.4"
-  },
-  "autoload": {
-    "psr-4": {
-      "MarcOrtola\\BehatSEOContexts\\": "src/"
-    }
-  },
-  "license": "MIT",
-  "authors": [
-    {
-      "name": "Marc Ortola",
-      "homepage": "https://github.com/marcortola/"
-    }
-  ],
-  "scripts": {
-    "serve": "php -S localhost:8080 -t tests/fixtures/web & php -S localhost:8081 -t tests/fixtures/web",
-    "check-static": [
-      "vendor/bin/phpstan analyse --no-interaction --ansi",
-      "vendor/bin/phpmd src text phpmd.xml --suffixes php --ansi",
-      "vendor/bin/phpcpd --fuzzy --no-interaction --min-lines 5 --min-tokens 50 --regexps-exclude='Resources' --ansi src",
-      "vendor/bin/ecs check src --no-interaction --ansi"
+    "name": "marcortola/behat-seo-contexts",
+    "description": "Behat extension for testing some On-Page SEO factors: meta title/description, canonical, hreflang, meta robots, robots.txt, redirects, sitemap validation, HTML validation, performance...",
+    "keywords": [
+        "BDD",
+        "Behat",
+        "Context",
+        "SEO",
+        "HTML validation",
+        "Sitemap validation",
+        "Robots validation",
+        "Hreflang checker",
+        "Redirects",
+        "Canonicalization"
     ],
-    "fix-static": [
-      "vendor/bin/ecs check src --fix --no-interaction --ansi"
+    "homepage": "https://github.com/marcortola/behat-seo-contexts",
+    "type": "library",
+    "require": {
+        "php": ">=7.1",
+        "behat/behat": "^3.0",
+        "behat/mink-extension": "^2.0",
+        "matriphe/iso-639": "^1.2",
+        "vipnytt/robotstxtparser": "^2.0",
+        "rexxars/html-validator": "^2.1",
+        "ext-dom": "*"
+    },
+    "require-dev": {
+        "behat/mink-goutte-driver": "^1.0",
+        "behat/mink-browserkit-driver": "^1.3",
+        "behat/symfony2-extension": "^2.0",
+        "phpmd/phpmd": "^2.7",
+        "phpstan/phpstan": "^0.12",
+        "sebastian/phpcpd": "^6.0",
+        "sensiolabs/security-checker": "^6.0",
+        "symplify/easy-coding-standard": "^8.2",
+        "thecodingmachine/phpstan-strict-rules": "^0.12",
+        "phpstan/phpstan-webmozart-assert": "^0.12.7",
+        "webmozart/assert": "^1.9"
+    },
+    "autoload": {
+        "psr-4": {
+            "MarcOrtola\\BehatSEOContexts\\": "src/"
+        }
+    },
+    "license": "MIT",
+    "authors": [
+        {
+            "name": "Marc Ortola",
+            "homepage": "https://github.com/marcortola/"
+        }
     ],
-    "test": "vendor/bin/behat --no-interaction"
-  },
-  "config": {
-    "process-timeout": 0
-  }
+    "scripts": {
+        "serve": "php -S localhost:8080 -t tests/fixtures/web & php -S localhost:8081 -t tests/fixtures/web",
+        "check-static": [
+            "vendor/bin/phpstan analyse --no-interaction --ansi",
+            "vendor/bin/phpmd src text phpmd.xml --suffixes php --ansi",
+            "vendor/bin/phpcpd --fuzzy --min-lines 5 --min-tokens 50 --exclude='Resources' src",
+            "vendor/bin/ecs check src --no-interaction --ansi"
+        ],
+        "fix-static": [
+            "vendor/bin/ecs check src --fix --no-interaction --ansi"
+        ],
+        "test": "vendor/bin/behat --no-interaction"
+    },
+    "config": {
+        "process-timeout": 0
+    }
 }
